# sysAdminToolboxBackend

./: .gitignore  Dockerfile  README.md  dns_resolver.py  hello.py  main.py  pyproject.toml  requirements.txt
app/: AsyncSSHandler.py  DomainMapper.py  __init__.py  async_ssh_executor.py  backend_pre_start.py  batch_execution_profiling.py  command_injection_list.py  create_ssh_config.py  crud.py  data_command_injection_list.py  dns_resolver.py  fetch_subscription_info_profiling.py  host_lists.py  log_formatter.py  logger.py  main.py  models.py  plesk_queries.py  run_local_stack_without_plesk_access.py  schemas.py  ssh_async_executor.py  ssh_plesk_dns_management.py  ssh_plesk_login_link_generator.py  ssh_plesk_subscription_info_retriever.py  ssh_warmup.py  ssh_zone_master.py  test_full.py  test_local_main.py  test_main.py  test_smoke.py  token_signer.py  utils.py  validators.py
app/api/: dependencies.py  dns_router.py  main.py  plesk_router.py  utils.py  utils_router.py
app/auth/: auth_router.py  password_reset.py  router.py
app/commands/: SignedExecutor.py
scripts/: entrypoint.sh  prestart.sh
ssh_config/: config
tests/: conftest.py  test_full.py  test_plesk_subscription_endpoint_on_container.py  test_plesk_subscription_info_retriever.py  test_plesk_subscription_info_retriever_on_mariadb_container.py  test_plesk_subscription_info_retriever_on_test_server.py  test_smoke.py  test_ssh_is_disabled.py  test_zone_master.py  test_zone_master_offline.py  test_zone_master_on_test_server.py  test_zone_master_on_unix_container.py  test_zonemaster_endpoint_on_container.py
(+93 files in other folders)
