[project]
name = "sysadmintoolboxbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "pip>=24.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "pymysql>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "sqlmodel>=0.0.22",
    "testcontainers>=4.8.2",
    "tldextract>=5.1.2",
]
